name:                servant-auth-token-example-leveldb
version:             0.5.1.0
synopsis:            Example server for token auth for leveldb backend
description:         Please see README.md
homepage:            https://github.com/ncrashed/servant-auth-token#readme
license:             BSD3
license-file:        LICENSE
author:              NCrashed
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable servant-auth-token-example-leveldb
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
    API
    Config
    Monad
    Server
  default-language:   Haskell2010
  build-depends:
      base                          >= 4.7      && < 5
    , acid-state                    >= 0.14     && < 0.15
    , aeson                         >= 0.11     && < 1.4
    , aeson-injector                >= 1.1      && < 1.2
    , bytestring                    >= 0.10     && < 0.11
    , exceptions                    >= 0.8      && < 0.11
    , http-types                    >= 0.9      && < 0.13
    , leveldb-haskell               >= 0.6      && < 0.7
    , monad-control                 >= 1.0      && < 1.1
    , monad-logger                  >= 0.3      && < 0.4
    , mtl                           >= 2.2      && < 2.3
    , optparse-applicative          >= 0.12     && < 0.15
    , safecopy                      >= 0.9      && < 0.10
    , servant                       >= 0.12     && < 0.15
    , servant-auth-token            >= 0.5      && < 0.6
    , servant-auth-token-api        >= 0.5      && < 0.6
    , servant-auth-token-leveldb    >= 0.6      && < 0.7
    , servant-server                >= 0.12     && < 0.15
    , text                          >= 1.2      && < 1.3
    , time                          >= 1.6      && < 1.9
    , transformers-base             >= 0.4      && < 0.5
    , wai                           >= 3.2      && < 3.3
    , wai-extra                     >= 3.0      && < 3.1
    , warp                          >= 3.2      && < 3.3
    , yaml                          >= 0.8      && < 0.9
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options: -threaded
